data/derived/comb/progs/unify/prog4464.ml.out
Characters 190-191:
  | Average (u,v) -> ((eval (u,x,y)) +. (eval (v,x,y))) /. 2
                                                           ^
Error: This expression has type int but an expression was expected of type
         float
